<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@android:color/white">
            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@android:color/white">
            <LinearLayout
                android:id="@+id/botones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                tools:ignore="InvalidId">
                <Button
                    android:id="@+id/audio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="reproducirSonido"
                    android:tag="@string/sonido1"
                    android:text="@string/sonido1"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/video1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/background_light"
                    android:text="@string/video1"
                    android:tag="@string/video1"
                    android:onClick="reproduceVideo"/>
                <Button
                    android:id="@+id/audio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@android:color/background_light"
                    android:onClick="reproducirSonido"
                    android:tag="@string/sonido2"
                    android:text="@string/sonido2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/video2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@android:color/background_light"
                    android:text="@string/video2"
                    android:tag="@string/video2"
                    android:onClick="reproduceVideo"/>
                <Button
                    android:id="@+id/audio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/background_light"
                    android:onClick="reproducirSonido"
                    android:tag="@string/sonido3"
                    android:text="@string/sonido3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/video3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/background_light"
                    android:text="@string/video3"
                    android:tag="@string/video3"
                    android:onClick="reproduceVideo"/>
                <Button
                    android:id="@+id/audio4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="reproducirSonido"
                    android:background="@android:color/holo_orange_dark"
                    android:textColor="@android:color/background_light"
                    android:tag="@string/sonido4"
                    android:text="@string/sonido4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/video4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_dark"
                    android:textColor="@android:color/background_light"
                    android:text="@string/video4"
                    android:tag="@string/video4"
                    android:onClick="reproduceVideo"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
